<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.userProfile_fragment">

        <TextView
            android:id="@+id/profile_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:text="@string/profile_settings"/>

    <TextView
        android:id="@+id/profile_icon"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/ic_userprofile" />

        <TextView
            android:id="@+id/profile_details"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="200dp"
            android:layout_marginStart="20dp"
            android:text="@string/profile_details"/>

        <TextView
            android:id="@+id/social_media_profiles"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="230dp"
            android:layout_marginStart="20dp"
            android:text="@string/social_media_profiles"/>

        <TextView
            android:id="@+id/post_prices"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="260dp"
            android:layout_marginStart="20dp"
            android:text="@string/post_prices"/>

        <TextView
            android:id="@+id/payment_details"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="290dp"
            android:layout_marginStart="20dp"
            android:text="@string/payment_details"/>

        <TextView
            android:id="@+id/my_groups"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="320dp"
            android:layout_marginStart="20dp"
            android:text="@string/my_groups"/>


</RelativeLayout>