<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Payment_details">

    <TextView
        android:id="@+id/payment_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="60dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/payment_details"/>

    <TextView
        android:id="@+id/payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="80dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Select Payment Method"/>


    <TextView
        android:id="@+id/bank_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="60dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/bank_account"/>

    <TextView
        android:id="@+id/mobile_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="220dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/mobile_money"/>


    <Button
        android:id="@+id/edit_payment_details"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="500dp"
        android:background="@drawable/your_task_rounded_corner"
        android:text="@string/edit_payment_details" />


    <Button
        android:id="@+id/save_btn"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/finished_tasks_rounded_corner"
        android:text="@string/save_details" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="168dp"
        android:layout_height="121dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/bankavatar"
        android:contentDescription="@string/bank_avatar"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="168dp"
        android:layout_height="121dp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="200dp"
        android:src="@drawable/mpesa_avatar"
        android:contentDescription="@string/mpesa"/>

</FrameLayout>