<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Social_media_profiles">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/social_media_profiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:text="@string/social_media_profiles"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/facebook"
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:background="@drawable/finished_tasks_rounded_corner"
            android:textStyle="bold"
            android:text="@string/facebook"
            />

        <TextView
            android:id="@+id/instagram"
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:background="@drawable/finished_tasks_rounded_corner"
            android:textStyle="bold"
            android:text="@string/instagram"/>

        <TextView
            android:id="@+id/twitter"
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:background="@drawable/finished_tasks_rounded_corner"
            android:textStyle="bold"
            android:text="@string/twitter"/>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_shape"
            android:gravity="center"
            android:text="@string/save" />

    </LinearLayout>

</ScrollView>