<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="#03a9f4">

        <TextView
            android:id="@+id/campaign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/campaign"/>
        <TextView
            android:id="@+id/campaign_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:text="@string/campaignname"/>
        <TextView
            android:id="@+id/campaign_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginStart="20dp"
            android:textStyle="italic"
            android:text="@string/idcampaign"/>



    </androidx.cardview.widget.CardView>

</LinearLayout>