<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/light_blue"
    android:id="@+id/login_activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/promtechlogo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/username"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="70dp"
                android:background="@drawable/login_shape"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:inputType="text"
                android:hint="@string/username"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/password"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="70dp"
                android:background="@drawable/login_shape"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:inputType="numberPassword"
                android:hint="@string/password"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/login" />

        <TextView android:id="@+id/create_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/no_account_yet_create_one"
            android:gravity="center"
            android:textSize="16sp"/>

        <TextView android:id="@+id/Forgotpass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="54dp"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>

</ScrollView>